# CMakeOpenGLSetup

./: .gitignore  CMakeLists.txt  README.md
include/: openglErrorReporting.h
src/: main.cpp  openglErrorReporting.cpp
